--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
-  push:
-  pull_request:
+  watch:
+    types: started
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -9,5 +9,5 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run a one-line script
-        run: ./checkhttp.sh
+        run: checkhttp.sh
 
