--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: content=$(curl -L http://120.25.164.233:8080/appstore/app/checkversion?id=21)
-      - run: echo $content
-
+      - shell: bash
+      - run: |
+          url=http://120.25.164.233:8080/appstore/app/checkversion?id=21
+          content=$(curl -L $url)
+          echo $content
