--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,4 @@ jobs:
           url=http://120.25.164.233:8080/appstore/app/checkversion?id=21
           content=$(curl -L $url)
           echo $content
+      - name: hello
