--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
           newver=${newver#*:}
           newver=${newver:0:3}
           sc=https://sc.ftqq.com/${{ secrets.sckey }}.send?text=find_new_ver:$newver
-          if[[ $newver > $ver ]];then
+          if[ $newver > $ver ];then
           newver=$(curl -L $sc)
           fi
