--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,6 @@ jobs:
           newver=${newver:0:3}
           sc=https://sc.ftqq.com/${{ secrets.sckey }}.send?text=find_new_ver_$newver
           if [ $newver != $ver ]; then
+          echo find_new_ver_$newver
           newver=$(curl -L $sc)
           fi
